--- a/profiles/resin_presets/generic_0.05mm.ini
+++ b/profiles/resin_presets/generic_0.05mm.ini
@@ -1,1 +1,6 @@
-
+# generated minimal resin preset
+[print:0.05mm_standard]
+layer_height = 0.05
+bottom_solid_layers = 6
+exposure_time = 2.5
+bottom_exposure_time = 30
