--- a/profiles/resin_presets/generic_0.05mm.ini
+++ b/profiles/resin_presets/generic_0.05mm.ini
@@ -1,6 +1,16 @@
-# generated minimal resin preset
+# PrusaSlicer SLA print preset
+# Elegoo Mars 3 – 0.05mm layer height
+
 [print:0.05mm_standard]
+inherits = SLA print
 layer_height = 0.05
+first_layer_height = 0.05
 bottom_solid_layers = 6
+support_material = 1
+support_material_contact_distance = 0.1
+support_material_enforce_layers = 1
+support_material_interface_layers = 3
+raft_layers = 2
 exposure_time = 2.5
 bottom_exposure_time = 30
+light_off_delay = 1
